--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/douglasOlv/video-maker#readme",
   "dependencies": {
     "algorithmia": "^0.3.10",
+    "ibm-watson": "^5.5.0",
     "readline-sync": "^1.4.10",
     "sbd": "^1.0.18"
   }
