feat: add image download logic with fallback

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "algorithmia": "^0.3.10",
     "googleapis": "^50.0.0",
     "ibm-watson": "^5.5.0",
+    "image-downloader": "^4.0.1",
     "readline-sync": "^1.4.10",
     "sbd": "^1.0.18"
   }
