--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@ffprobe-installer/ffprobe": "^1.0.12",
     "algorithmia": "^0.3.10",
+    "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
     "gm": "^1.23.1",
     "googleapis": "^50.0.0",
